--- a/teste3.html
+++ b/teste3.html
@@ -21,7 +21,6 @@
             border: 1px solid black;
             width: 100%;
         }
-
         .left-section {
             width: 70%;
             display: flex;
@@ -140,7 +139,7 @@
         <div class="container-row">
             <div class="column">
                 <p class="title" style="padding: 8px;">Responsável</p>
-                <p>RAIMUNDO NONATO TORRES FILHO</p>
+                <p>{responsavel.pessoa.txnome_pessoa}</p>
             </div>
             <div class="column">
                 <p class="title" style="padding: 8px;">Avaliador</p>
